# slobac

./: .gitignore  README.md  REUSE.toml  ai-rizz.skbd  mkdocs.yml  properdocs.yml  pyproject.toml  requirements-docs.txt
.cursor/commands/shared/: complexity-analysis.md
.cursor/rules/shared/: markdown-style.mdc
.github/workflows/: docs.yaml  docs.yml
LICENSES/: LicenseRef-PPL-S.txt
docs/: .pages  index.md
docs/taxonomy/: README.md  conditional-logic.md  deliverable-fossils.md  implementation-coupled.md  monolithic-test-file.md  mystery-guest.md  naming-lies.md  over-specified-mock.md  presentation-coupled.md  pseudo-tested.md  rotten-green.md  semantic-redundancy.md  shared-state.md  tautology-theatre.md  vacuous-assertion.md  wrong-level.md
memory-bank/: productContext.md  systemPatterns.md  techContext.md
memory-bank/active/: .preflight-status  .qa-validation-status  activeContext.md  progress.md  projectbrief.md  tasks.md
memory-bank/active/creative/: creative-audit-orchestration.md  creative-canonical-entry-shape.md  creative-customization-shape.md  creative-docs-skill-dry-redux.md  creative-docs-skill-dry.md
memory-bank/active/reflection/: reflection-audit-orchestration.md  reflection-phase-1-audit-mvp.md  reflection-phase0-docs-publish-rework.md  reflection-phase0-docs-publish.md
planning/: VISION.md  product-brief.md
planning/research/: FINDINGS-CLAUDE.md  FINDINGS-CODEX.md  FINDINGS-COMPOSER.md  FINDINGS-GEMINI.md  FINDINGS-GROK.md  report.md
skills/slobac-audit/: README.md  SKILL.md
skills/slobac-batch/: README.md  SKILL.md
skills/slobac-cross-suite/: README.md  SKILL.md
skills/slobac-scout/: README.md  SKILL.md
tests/fixtures/audit/: README.md
(+50 files in other folders)
